Overflow finally fixed

--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
+#root {
+    height: 100%;
+}
+
 body {
     font-family: 'Bungee Hairline', cursive;
     font-weight: bold;
-}
-
-.overflow-container {
-    max-height: calc(100vh - 300px);
 }
 
 .clip-triangle {
